fix: 🐛 footer align center

--- a/frontend/src/css/components/footer.scss
+++ b/frontend/src/css/components/footer.scss
@@ -9,7 +9,6 @@ $FOOTER_FONT_COLOR: #888888;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 1024px;
 
   color: $FOOTER_FONT_COLOR;
   font-size: 14px;
